# de

./: Cargo.toml  build.rs
assets/icons/: README.md
scripts/: sync_assets.sh
src/: main.rs  taskbar.slint
src/panel/: main.rs  taskbar.slint
